# vehicle-tracker

./: .gitignore  AGENTS.MD  AGENTS.md  CLAUDE.md  README.MD  README.md  docker-compose.yaml
.github/workflows/: docker-image.yml
dockerfiles/rabbitmq/: Dockerfile
docs/asset-service/: domain-model.md  overview.md
docs/device/: overview.md
docs/device-authentication/: certificate-lifecycle.md  identity-service.md  overview.md
docs/drawio/: system-overview.drawio
lilygo/: .gitignore  platformio.ini
lilygo/main/: CMakeLists.txt  idf_component.yml  main.c
lilygo/src/: GPS.cpp  GPS.h  main.cpp
vehicle-tracker-backend/: .gitignore  settings.gradle.kts
vehicle-tracker-embedded/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
vehicle-tracker-embedded/main/: CMakeLists.txt  main.c
vehicle-tracker-embedded/main/at/: at.c  at.h
vehicle-tracker-embedded/main/ble/: ble_manager.c  ble_manager.h
vehicle-tracker-embedded/main/ble/services/: configuration_service.c  configuration_service.h
vehicle-tracker-embedded/main/gps/: gps.c
vehicle-tracker-embedded/main/mqtt/: mqtt.c
vehicle-tracker-embedded/main/storage/: storage.c  storage.h
vehicle-tracker-embedded/main/uart/: uart.c  uart.h
vehicle-tracker-embedded/main/utils/: at.h
vehicle-tracker-embedded/main/utils/encoding/: gps_encode.h
vehicle-tracker-frontend/: package-lock.json  package.json
vehicle-tracker-mobile/: .gitignore  settings.gradle.kts
vehicle-tracker-schemas/: .gitignore  Location.proto  README.MD  Telemetry.proto
vehicle-tracker-web/: package-lock.json  package.json
(+831 files in other folders)
